--- a/www/css/gameStyle.css
+++ b/www/css/gameStyle.css
@@ -3288,3 +3288,298 @@ md-dialog md-content{
     -ms-transition:     all 0.1s ease;
     transition:         all 0.1s ease;  
 }
+
+md-progress-circular.game-waiting-progress.md-default-theme .md-circle .md-mask .md-fill{
+  background-color: #009688;
+}
+md-progress-circular.game-waiting-progress.md-default-theme .md-inset{
+  background-color: #ffe082;
+}
+.marg-12{
+  margin: 12px;
+}
+.marg-4{
+  margin: 4px;
+}
+.flogin-mobile{
+  width: 60%;
+  height: 40px;
+}
+.flogin-mobile{
+  width: 105px;
+  height: 126px;
+  position: relative;
+}
+.flogin-mobile .card-img-upper{
+    position: relative;
+  top: -55px;
+  left: -25px;
+  color: #fff;
+  font-size: 14pt;
+}
+.flogin-mobile .card-img-lower{
+  position: relative;
+  bottom: -32px;
+  right: -25px;
+  color: #fff;
+  font-size: 14pt;
+  -o-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg); /* IE 9 */
+  -webkit-transform: rotate(180deg); /* Chrome, Safari, Opera */
+  transform: rotate(180deg);
+}
+.flogin-mobile .card-img{
+  position: relative;
+  top: -8px;
+  font-size: 28pt!important;
+}
+.pad-0{
+  padding: 0;
+}
+.imageRow{
+  -webkit-transition: all 100ms cubic-bezier(0.000, 0.980, 0.405, 0.990);
+  -moz-transition: all 100ms cubic-bezier(0.000, 0.980, 0.405, 0.990);
+  -o-transition: all 100ms cubic-bezier(0.000, 0.980, 0.405, 0.990);
+  transition: all 100ms cubic-bezier(0.000, 0.980, 0.405, 0.990); /* custom */
+
+  -webkit-transition-timing-function: cubic-bezier(0.000, 0.980, 0.405, 0.990);
+  -moz-transition-timing-function: cubic-bezier(0.000, 0.980, 0.405, 0.990);
+  -o-transition-timing-function: cubic-bezier(0.000, 0.980, 0.405, 0.990);
+  transition-timing-function: cubic-bezier(0.000, 0.980, 0.405, 0.990); /* custom */
+}
+.nav-icon{
+  padding: 6px;
+}
+.login-fb-text{
+  float: left;
+  text-align: center;
+  top: 20px;
+  position: relative;
+  font-size: 100% !important;
+}
+.home-right .flip{
+  margin: 3em;
+  position: relative;
+  left: 25px;
+  width: 58%;
+  height: 50%;
+  top: 14%;
+}
+.home-leftx .flip{
+  margin: 3em;
+  position: relative;
+  left: 10px;
+  width: 72%;
+  height: 50%;
+  top: 14%;
+}
+.nav-icon{
+    padding: 8px;
+}
+.nav-icon .fa-facebook-square{
+    color: #3b5998
+}
+.cardDiv {
+    position : absolute;
+    background-image:url(/assets/img/suits200x200.png);
+    width:50px;
+    height:50px;
+    background-size:100px;
+    transform-origin : 50px 135px;
+    -webkit-transform-origin : 40px 120px;
+    z-index:99;
+    left: -30px;
+}
+.anime1 {    
+    background-position:-100px -50px;
+    animation : rotate 2s ease infinite;
+    -webkit-animation : rotate 2s ease infinite;
+}
+.anime2 {
+    background-position: -50px -0px;
+    animation : rotate 2s linear infinite;
+    -webkit-animation : rotate 2s linear infinite;
+}
+.anime3 {
+    background-position: -50px -50px;
+    animation : rotate 2s ease-in infinite;
+    -webkit-animation : rotate 2s ease-in infinite;
+}
+.anime4 {
+    background-position: -0px 0px;
+    animation : rotate 2s ease-out infinite;
+    -webkit-animation : rotate 2s ease-out infinite;
+}
+.waiting-loader{
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    left: 50%;
+}
+@keyframes rotate {
+    0%, 60% {
+        transform : rotate(0deg);
+    }
+    60%, 100% {
+        transform : rotate(360deg);
+    }
+}
+@-webkit-keyframes rotate {
+    0%, 60% {
+        transform : rotate(0deg);
+    }
+    60%, 100% {
+        transform : rotate(360deg);
+    }
+}
+/*************CARDS CSS****************/
+.playingCards a.card {
+    text-decoration: none;
+}
+.card {
+    
+    position: absolute !important;
+    cursor: pointer;
+}
+.card a{
+    border-radius: 4px !important;
+    border: 1px solid #ccc;
+    width: 100%;
+    height: 100%;
+}
+.card.back, .card.backRotated{
+    background-image: url("/assets/img/card-back.png");
+  /* background-position: -1120px -226.88px; */
+  background-size: 80px auto;
+}
+
+/* suit colours
+********************************************************************/
+.playingCards .card.D {
+    color: #820303 !important;
+}
+.playingCards.fourColours .card.D {
+    color: #00f !important;
+}
+[lang=de] .playingCards.fourColours .card.D {
+    color: #f60 !important;
+}
+.playingCards .card.H {
+    color: #820303 !important;
+}
+.playingCards .card.S {
+    color: #000 !important;
+}
+[lang=de] .playingCards.fourColours .card.S {
+    color: #090 !important;
+}
+.playingCards .card.C {
+    color: #000 !important;
+}
+.playingCards.fourColours .card.C {
+    color: #090 !important;
+}
+[lang=de] .playingCards.fourColours .card.C {
+    color: #000 !important;
+}
+.playingCards .card.joker {
+    color: #000 !important;
+}
+.playingCards .card.joker.big {
+    color: #f00 !important;
+}
+.playingCards .card .rank:after,
+.playingCards .card.joker .rank:before {
+    position: absolute;
+    top: .25em;
+    left: .25em;
+    background: #fff;
+}
+/* selected and hover state */
+.playingCards a.card:hover, .playingCards a.card:active, .playingCards a.card:focus,
+.playingCards label.card:hover,
+.playingCards strong .card {
+    -moz-box-shadow: .2em .2em .5em #333;
+    -webkit-box-shadow: .2em .2em .5em #333;
+    box-shadow: .2em .2em .5em #333;
+} 
+.playingCards a.D .suit, .playingCards a.S .suit{
+    padding-left : 0.2em;    
+}
+.playingCards .card .rank,
+.playingCards .card .suit {
+    display: block;
+    line-height: 1;
+    text-align: left;
+}
+.playingCards .card .rank {
+}
+.playingCards .card .suit {
+    line-height: .7;
+    font-size: 1.2em;
+}
+/* big suits in middle */
+.playingCards.simpleCards .card .suit:after,
+.playingCards .card.rank-a .suit:after {
+    font-family: Arial, sans-serif;
+    line-height: .9;
+    bottom: .35em;
+}
+.playingCards.simpleCards .card.D .suit:after,
+.playingCards .card.rank-a.D .suit:after {
+    content: url(images/diams.png);
+    bottom: 0.15em;
+    right: 0.17em;
+}
+.playingCards.simpleCards .card.H .suit:after,
+.playingCards .card.rank-a.H .suit:after {
+    content: url(images/heart.png);
+    bottom: 0.15em;
+    right: 0.17em;
+    
+}
+.playingCards.simpleCards .card.S .suit:after,
+.playingCards .card.rank-a.S .suit:after {
+    content: url(images/spade.png);
+    bottom: 0.15em;
+    right: 0.17em;
+    
+}
+.playingCards.simpleCards .card.C .suit:after,
+.playingCards .card.rank-a.C .suit:after {
+    content: url(images/club.png);
+    bottom: 0.15em;
+    right: 0.17em;
+    
+}
+/*____________ symbols in the middle (faces as dingbat symbols) ____________*/
+
+.playingCards.simpleCards .card .suit:after,
+.playingCards .card.rank-j .suit:after,
+.playingCards .card.rank-q .suit:after,
+.playingCards .card.rank-k .suit:after,
+.playingCards .card.rank-a .suit:after,
+.playingCards .card.joker .rank:after {
+    font-family: Georgia, serif;
+    position: absolute;
+    font-size: 3em;
+    right: .1em;
+    bottom: .25em;
+    word-spacing: normal;
+    letter-spacing: normal;
+    line-height: 1;
+}
+/* inner multiple suits */
+.playingCards .card .suit:after {
+    display: block;
+    margin-top: -.8em;
+    text-align: center;
+    white-space: pre;
+    line-height: .9;
+    font-size: 1.3em;
+    word-spacing: -.05em;
+}
+
+/********************************************************************/
